# java/lib/api/openapi.yaml
@@ -103,15 +103,6 @@ paths:
       description: Validate addresses
       operationId: v1.addresses.validate
       parameters:
-      - description: Chain ID
-        explode: true
-        in: query
-        name: chain_id
-        required: true
-        schema:
-          description: Chain ID
-          type: string
-        style: form
       - description: Addresses
         explode: true
         in: query
@@ -123,6 +114,15 @@ paths:
             type: string
           type: array
           uniqueItems: false
+        style: form
+      - description: Chain ID
+        explode: true
+        in: query
+        name: chain_id
+        required: true
+        schema:
+          description: Chain ID
+          type: string
         style: form
       responses:
         "200":
@@ -268,6 +268,277 @@ paths:
       summary: Retrieve chain
       tags:
       - Chains
+      x-accepts:
+      - application/json
+  /api/v1/gas-stations:
+    get:
+      description: List all gas stations
+      operationId: v1.gas_stations.list
+      parameters:
+      - description: Cursor
+        explode: true
+        in: query
+        name: cursor
+        required: false
+        schema:
+          description: Cursor
+          type: string
+          x-order: "1"
+        style: form
+      - description: "The number of records to return default: 20"
+        explode: true
+        in: query
+        name: limit
+        required: false
+        schema:
+          description: "The number of records to return default: 20"
+          type: integer
+          x-order: "2"
+        style: form
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CursorPage-GasStation'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: List gas stations
+      tags:
+      - Gas Stations
+      x-accepts:
+      - application/json
+    post:
+      description: Create a Gas Station
+      operationId: v1.gas_stations.create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateGasStationRequest'
+        description: Request body
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GasStation'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Create gas station
+      tags:
+      - Gas Stations
+      x-content-type: application/json
+      x-accepts:
+      - application/json
+  /api/v1/gas-stations/{gasStationId}:
+    delete:
+      description: Delete a Gas Station
+      operationId: v1.gas_stations.delete
+      parameters:
+      - description: Gas Station ID
+        explode: false
+        in: path
+        name: gasStationId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GasStation'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Delete gas station
+      tags:
+      - Gas Stations
+      x-accepts:
+      - application/json
+    get:
+      description: Get a gas station by ID
+      operationId: v1.gas_stations.retrieve
+      parameters:
+      - description: Gas Station ID
+        explode: false
+        in: path
+        name: gasStationId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GasStation'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Get gas station
+      tags:
+      - Gas Stations
+      x-accepts:
+      - application/json
+    patch:
+      description: Update a Gas Station
+      operationId: v1.gas_stations.update
+      parameters:
+      - description: Gas Station ID
+        explode: false
+        in: path
+        name: gasStationId
+        required: true
+        schema:
+          type: string
+        style: simple
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateGasStationRequest'
+        description: Request body
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GasStation'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Internal Server Error
+      security:
+      - ApiKeyAuth: []
+      summary: Update gas station
+      tags:
+      - Gas Stations
+      x-content-type: application/json
       x-accepts:
       - application/json
   /api/v1/sweeps/address/{address}:
@@ -1774,6 +2045,36 @@ components:
       - eventTypes
       - url
       type: object
+    CreateGasStationRequest:
+      example:
+        gas_threshold: gas_threshold
+        chain_id: chain_id
+        gas_capacity: gas_capacity
+        max_fee_limit: max_fee_limit
+        disabled: true
+      properties:
+        chain_id:
+          description: Chain ID
+          type: string
+        disabled:
+          description: Disabled
+          type: boolean
+        gas_capacity:
+          description: Gas Capacity
+          type: string
+        gas_threshold:
+          description: Gas Threshold
+          type: string
+        max_fee_limit:
+          description: Max Fee Limit
+          type: string
+      required:
+      - chain_id
+      - disabled
+      - gas_capacity
+      - gas_threshold
+      - max_fee_limit
+      type: object
     CreateTokenRequest:
       example:
         uid: uid
@@ -2049,6 +2350,56 @@ components:
         items:
           items:
             $ref: '#/components/schemas/EventType'
+          type: array
+          uniqueItems: false
+        next_cursor:
+          type: string
+        prev_cursor:
+          type: string
+        total:
+          type: integer
+      required:
+      - has_next
+      - has_prev
+      - items
+      - total
+      type: object
+    CursorPage-GasStation:
+      example:
+        prev_cursor: prev_cursor
+        next_cursor: next_cursor
+        total: 0
+        has_next: true
+        has_prev: true
+        items:
+        - gas_threshold: gas_threshold
+          chain_id: chain_id
+          org_id: org_id
+          created_at: created_at
+          gas_capacity: gas_capacity
+          max_fee_limit: max_fee_limit
+          disabled: true
+          id: id
+          app_id: app_id
+          updatedAt: updatedAt
+        - gas_threshold: gas_threshold
+          chain_id: chain_id
+          org_id: org_id
+          created_at: created_at
+          gas_capacity: gas_capacity
+          max_fee_limit: max_fee_limit
+          disabled: true
+          id: id
+          app_id: app_id
+          updatedAt: updatedAt
+      properties:
+        has_next:
+          type: boolean
+        has_prev:
+          type: boolean
+        items:
+          items:
+            $ref: '#/components/schemas/GasStation'
           type: array
           uniqueItems: false
         next_cursor:
@@ -2411,6 +2762,59 @@ components:
       type: integer
       x-enum-varnames:
       - Fixed
+    GasStation:
+      example:
+        gas_threshold: gas_threshold
+        chain_id: chain_id
+        org_id: org_id
+        created_at: created_at
+        gas_capacity: gas_capacity
+        max_fee_limit: max_fee_limit
+        disabled: true
+        id: id
+        app_id: app_id
+        updatedAt: updatedAt
+      properties:
+        app_id:
+          description: Application ID
+          type: string
+        chain_id:
+          description: Chain ID
+          type: string
+        created_at:
+          description: Created time
+          type: string
+        disabled:
+          description: Disabled
+          type: boolean
+        gas_capacity:
+          description: Gas Capacity
+          type: string
+        gas_threshold:
+          description: Gas Threshold
+          type: string
+        id:
+          description: Gas Station ID
+          type: string
+        max_fee_limit:
+          description: Max Fee Limit
+          type: string
+        org_id:
+          description: Organization ID
+          type: string
+        updatedAt:
+          description: Updated time
+          type: string
+      required:
+      - app_id
+      - chain_id
+      - disabled
+      - gas_capacity
+      - gas_threshold
+      - id
+      - max_fee_limit
+      - org_id
+      type: object
     SignMessageRequest:
       example:
         chain_id: chain_id
@@ -2772,6 +3176,26 @@ components:
         uid:
           type: string
         url:
+          type: string
+      type: object
+    UpdateGasStationRequest:
+      example:
+        gas_threshold: gas_threshold
+        gas_capacity: gas_capacity
+        max_fee_limit: max_fee_limit
+        disabled: true
+      properties:
+        disabled:
+          description: Disabled
+          type: boolean
+        gas_capacity:
+          description: Gas Capacity
+          type: string
+        gas_threshold:
+          description: Gas Threshold
+          type: string
+        max_fee_limit:
+          description: Max Fee Limit
           type: string
       type: object
     UpdateTokenRequest:
