# javascript/src/openapi/models/all.ts
@@ -3,6 +3,7 @@ export * from '../models/AddressValidityItem'
 export * from '../models/Chain'
 export * from '../models/CreateAddressRequest'
 export * from '../models/CreateEndpoint'
+export * from '../models/CreateGasStationRequest'
 export * from '../models/CreateTokenRequest'
 export * from '../models/CreateTransferRequest'
 export * from '../models/CreateTransferRequestDestination'
@@ -13,6 +14,7 @@ export * from '../models/CursorPageAddress'
 export * from '../models/CursorPageChain'
 export * from '../models/CursorPageEndpoint'
 export * from '../models/CursorPageEventType'
+export * from '../models/CursorPageGasStation'
 export * from '../models/CursorPageToken'
 export * from '../models/CursorPageTransaction'
 export * from '../models/CursorPageWallet'
@@ -21,6 +23,7 @@ export * from '../models/EstimateFeeRequest'
 export * from '../models/EstimateFeeResponse'
 export * from '../models/EventType'
 export * from '../models/Fee'
+export * from '../models/GasStation'
 export * from '../models/ModelError'
 export * from '../models/SignMessageRequest'
 export * from '../models/SignMessageRequestSource'
@@ -34,6 +37,7 @@ export * from '../models/TransferDestinationAddress'
 export * from '../models/TransferSourceAsset'
 export * from '../models/TransferSourceWeb3'
 export * from '../models/UpdateEndpoint'
+export * from '../models/UpdateGasStationRequest'
 export * from '../models/UpdateTokenRequest'
 export * from '../models/UpdateWalletRequest'
 export * from '../models/ValidateAddressesReply'
